codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__status_surface__tests__slash_popup_footer_wide.snap
---
source: tui/src/bottom_pane/chat_composer/status_surface_tests.rs
assertion_line: 337
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 8 },
    content: [
        "  /model     choose what model and reasoning effort to use                      ",
        "› /memories  configure memory use and generation                                ",
        "  /mention   mention a file                                                     ",
        "  /mcp       list configured MCP tools; use /mcp verbose for details            ",
        "▌                                                                               ",
        "▌ /m                                                                            ",
        "▌                                                                               ",
        "  model · high · fast                                                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 58, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 48, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 68, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
